<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Bootcamp</string>
    <string name="hello">Hello android-bootcamp!</string>
    <string name="action_settings">Settings</string>
    <string name="sync_button">Sync</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

</resources>